--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
     "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-http": "^0.3.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^1.8.2",
@@ -35,6 +38,8 @@
     "joi": "^17.6.0",
     "mongoose": "^6.2.4",
     "openapi-types": "^10.0.0",
+    "passport": "^0.5.2",
+    "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
