--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,16 @@
 NODE_ENV=development
+
+#CORS - only needs to be set for production environment, allways true for development
+#takes space delimited string of host urls
+CORS_ORIGIN=
+
+#API
 API_GLOBAL_PREFIX=governator
-API_CORS_ORIGIN=true
-API_PORT=3000
+PORT=3000
+API_KEY=
+
+#Mongo
+MONGODB_USERNAME=
+MONGODB_PASS=
+MONGODB_CLUSTER=
+MONGODB_PREFIX=
