--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "AGPLv3",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "yarn prebuild && nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -66,6 +66,9 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "engines": {
+    "node": "16.13.x"
   },
   "jest": {
     "moduleFileExtensions": [
