--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "AGPLv3",
   "scripts": {
+    "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
     "start": "NODE_ENV=development nest start",
