--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "license": "AGPLv3",
   "scripts": {
+    "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
-    "start": "nest start",
+    "start": "NODE_ENV=development nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/src/main",
