--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": true,
   "license": "AGPLv3",
   "scripts": {
+    "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
-    "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "build": "yarn prebuild && nest build",
+    "start": "NODE_ENV=development nest start",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,21 +21,31 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.0",
+    "@golevelup/ts-jest": "^0.3.2",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/swagger": "^5.2.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-http": "^0.3.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^1.8.2",
     "eventsource": "^1.1.0",
+    "helmet": "^5.0.2",
     "joi": "^17.6.0",
+    "mongoose": "^6.2.4",
     "openapi-types": "^10.0.0",
+    "passport": "^0.5.2",
+    "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -56,6 +67,9 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "engines": {
+    "node": "16.13.x"
   },
   "jest": {
     "moduleFileExtensions": [
