--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^1.8.2",
+    "ethers": "^5.6.6",
     "eventsource": "^1.1.0",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
