--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
+    "resolveJsonModule": true,
     "lib": [
       "es2020",
       "dom"
