huge refactor of web3 modules, built token strategy module, fix nonce repeat request bug

--- a/package.json
+++ b/package.json
@@ -33,16 +33,22 @@
     "@snapshot-labs/snapshot.js": "^0.3.87",
     "@types/passport": "^1.0.7",
     "@types/passport-http": "^0.3.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^1.8.2",
     "ethers": "^5.6.6",
     "eventsource": "^1.1.0",
+    "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "keccak": "^3.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.4",
+    "node-fetch": "2.6.1",
     "openapi-types": "^10.0.0",
     "passport": "^0.5.2",
     "passport-headerapikey": "^1.2.2",
