--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@openapitools/openapi-generator-cli": "^2.5.2",
