enable token voting (#27)
* read token balance and verify signature

* prototype of signature verification, user account restructure and token balance

* refactor user, account, web3 modules

* account and user working after refactor

* make provider_account_id primary key (_id) of account, rename to account_id where referenced, remove user schema and fix user class to work with only user_id's as input, vote module dpends on old user and needs fixing.

* hardening account API

* added SIWE for message generation

* change verification flow to use siwe 2.0. verification message can be created on FE and should include user discord ID in the siwe message statement if linking an account

* snapshot.js proto, had to add esModuleInterop: true to tsconfig.json to make it work

* add snapshot strategy - fix eth address checksum bug

* refactor web3 module

* implement token balances, token whitelist, refactor

* fix user

* huge refactor of web3 modules, built token strategy module, fix nonce repeat request bug

* update poll model

* finalize token strategy template, fix vote, update poll schema

* token and regular discord vote working, result queries work, add test (e2e) and script to generate http client with openAPI generator, fix openAPI spec errors

* remove snapshot strategies

* update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,12 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
+    "resolveJsonModule": true,
     "lib": [
       "es2020",
       "dom"
     ],
+    "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
