--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
-    "build:client:dev": "export NODE_ENV=development && yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=supportsES6=true",
+    "build:client:dev": "export NODE_ENV=development && yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=useSingleRequestParameter=true,supportsES6=true,npmName=governator-axios-client,npmVersion=0.1.0",
     "build:client:prod": "export NODE_ENV=production && yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=supportsES6=true",
     "build:dev": "yarn build:client:dev && yarn prebuild && nest build",
     "build:prod": "yarn build:client:prod && yarn prebuild && nest build",
@@ -35,13 +35,13 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/throttler": "^2.0.1",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@snapshot-labs/snapshot.js": "^0.3.87",
     "@types/passport": "^1.0.7",
     "@types/passport-http": "^0.3.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "axios": "^1.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^1.8.2",
@@ -70,6 +70,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
