add custom constraint and decorator to validate if date 'isAfterNow', update documentation

--- a/.env.template
+++ b/.env.template
@@ -5,12 +5,22 @@ NODE_ENV=development
 CORS_ORIGIN=
 
 #API
-API_GLOBAL_PREFIX=governator
+API_GLOBAL_PREFIX=api
 PORT=3000
-API_KEY=
+API_KEY=1
 
 #Mongo
 MONGODB_USERNAME=
 MONGODB_PASS=
 MONGODB_CLUSTER=
-MONGODB_PREFIX=
+MONGODB_PREFIX=mongodb+srv
+MONGODB_DATABASE=governator
+# if you are running mongodb locally you can set this variable to override above config
+# MONGO_LOCAL=mongodb://127.0.0.1:27017
+
+#web3
+ALCHEMY_API_KEY_POLYGON_MAIN=
+ALCHEMY_API_KEY_ETHEREUM_MAIN=
+INFURA_ETHEREUM_MAIN_ID=
+INFURA_ETHEREUM_MAIN_SECRET=
+ETHERSCAN_API_KEY=
