standardize lint rules, implement api-client (#46)
* Bump node-fetch from 2.6.1 to 2.6.7 (#39)

Bumps [node-fetch](https://github.com/node-fetch/node-fetch) from 2.6.1 to 2.6.7.
- [Release notes](https://github.com/node-fetch/node-fetch/releases)
- [Commits](https://github.com/node-fetch/node-fetch/compare/v2.6.1...v2.6.7)

---
updated-dependencies:
- dependency-name: node-fetch
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* license

* standardize lint rules, implement api-client

* .gitignore

* update package version

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ lerna-debug.log*
 .env
 .env.production
 .env.development
+.env.qa
 
 # Tests
 /coverage
@@ -36,3 +37,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# API client
+/src/api-client
+governator-api-spec.json
+.yarnrc.yml
