--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "governator-api-server",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "",
   "author": "Governator team",
-  "private": true,
+  "private": false,
   "license": "MIT",
   "scripts": {
     "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
-    "build:client:dev": "export NODE_ENV=development && yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=useSingleRequestParameter=true,supportsES6=true,npmName=governator-axios-client,npmVersion=0.1.0",
-    "build:client:prod": "export NODE_ENV=production && yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=supportsES6=true",
+    "codegen": "yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=withoutPrefixEnums=true,withInterfaces=true,supportsES6=true,npmName=$API_CLIENT_NPM_PACKAGE_NAME,npmVersion=$npm_package_version",
+    "codegen:dev": "export NODE_ENV=development eval $(grep '^NPM_TOKEN' ./.env.development) eval $(grep '^API_CLIENT_NPM_PACKAGE_NAME' ./.env.development) && yarn codegen && cd ./src/api-client && yarn publish --verbose --new-version $npm_package_version",
+    "codegen:prod": "export NODE_ENV=production && yarn codegen && cd ./src/api-client && yarn publish --verbose --new-version $npm_package_version",
     "build:dev": "yarn build:client:dev && yarn prebuild && nest build",
     "build:prod": "yarn build:client:prod && yarn prebuild && nest build",
-    "start": "NODE_ENV=development nest start",
-    "start:dev": "NODE_ENV=development nest start --watch",
-    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start": "nest start",
+    "start:dev": "NODE_ENV=development yarn start --watch",
+    "start:debug": "NODE_ENV=development yarn start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
