--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@golevelup/ts-jest": "^0.3.2",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^8.4.4",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
@@ -43,6 +44,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
     "axios": "^1.1.3",
+    "bull": "^4.10.2",
     "cache-manager": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -73,6 +75,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
@@ -88,7 +91,8 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "rxjs-spy": "^8.0.2"
   },
   "engines": {
     "node": "16.13.x"
