--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
     "cache-manager": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^6.1.3",
     "cron": "^1.8.2",
     "ethers": "^5.6.6",
     "eventsource": "^2.0.2",
+    "express-session": "^1.17.3",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
     "helmet": "^5.0.2",
+    "ioredis": "^5.3.1",
     "jest-openapi": "^0.14.2",
     "joi": "^17.6.0",
     "keccak": "^3.0.2",
@@ -61,6 +64,7 @@
     "node-fetch": "2.6.7",
     "openapi-types": "^10.0.0",
     "passport": "^0.6.0",
+    "passport-discord": "^0.1.4",
     "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -75,14 +79,19 @@
     "@nestjs/testing": "^8.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/bull": "^4.10.0",
+    "@types/connect-redis": "^0.0.20",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.6",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport-discord": "^0.1.6",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "jest": "^27.2.5",
+    "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
@@ -90,8 +99,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "rxjs-spy": "^8.0.2"
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "engines": {
     "node": "16.13.x"
