--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
     "cache-manager": "^4.0.0",
     "class-transformer": "^0.5.1",
@@ -78,7 +79,9 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/connect-redis": "^0.0.20",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.6",
