--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@snapshot-labs/snapshot.js": "^0.3.87",
-    "@types/passport": "^1.0.7",
-    "@types/passport-http": "^0.3.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
@@ -83,11 +81,13 @@
     "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
     "@types/connect-redis": "^0.0.20",
-    "@types/express": "^4.17.13",
+    "@types/express": "4.17.3",
     "@types/express-session": "^1.17.6",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.12",
     "@types/passport-discord": "^0.1.6",
+    "@types/passport-http": "^0.3.9",
     "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
