--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
     "helmet": "^5.0.2",
+    "http-proxy-middleware": "^2.0.6",
     "ioredis": "^5.3.1",
     "jest-openapi": "^0.14.2",
     "joi": "^17.6.0",
