--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "governator-api-server",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "",
   "author": "Governator team",
   "private": false,
@@ -27,15 +27,17 @@
   "dependencies": {
     "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/bull": "^0.6.2",
-    "@nestjs/common": "^8.4.4",
+    "@nestjs/cache-manager": "^1.0.0",
+    "@nestjs/cli": "9.0.0",
+    "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.4.4",
+    "@nestjs/core": "^9.4.1",
     "@nestjs/mongoose": "^9.0.3",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.4.1",
     "@nestjs/schedule": "^2.1.0",
-    "@nestjs/swagger": "^5.2.1",
-    "@nestjs/throttler": "^2.0.1",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/throttler": "^4.0.0",
     "@snapshot-labs/snapshot.js": "^0.3.87",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -43,48 +45,46 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
-    "cache-manager": "^4.0.0",
+    "cache-manager": "^5.2.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "connect-redis": "^6.1.3",
-    "cron": "^1.8.2",
-    "ethers": "^5.6.6",
+    "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
+    "cron": "^2.3.0",
+    "ethers": "^6.4.0",
     "eventsource": "^2.0.2",
     "express-session": "^1.17.3",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
-    "helmet": "^5.0.2",
+    "helmet": "^7.0.0",
     "ioredis": "^5.3.1",
     "jest-openapi": "^0.14.2",
     "joi": "^17.6.0",
     "keccak": "^3.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^6.4.6",
-    "node-fetch": "2.6.7",
-    "openapi-types": "^10.0.0",
+    "mongoose": "^7.2.0",
+    "node-fetch": "3.3.1",
+    "openapi-types": "^12.1.1",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.1",
     "rxjs": "^7.2.0",
     "siwe": "^2.0.3",
     "swagger-ui-express": "^4.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.1",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
-    "@types/connect-redis": "^0.0.20",
-    "@types/express": "4.17.3",
+    "@types/express": "4.17.17",
     "@types/express-session": "^1.17.6",
-    "@types/jest": "27.0.2",
-    "@types/node": "^16.0.0",
+    "@types/jest": "29.5.1",
+    "@types/node": "^20.2.3",
     "@types/passport": "^1.0.12",
     "@types/passport-discord": "^0.1.6",
     "@types/passport-http": "^0.3.9",
@@ -93,19 +93,19 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
-    "jest": "^27.2.5",
+    "jest": "^29.5.0",
     "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "engines": {
-    "node": "16.13.x"
+    "node": "18.13.x"
   },
   "jest": {
     "moduleFileExtensions": [
