get tests to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": true,
-    "strict": true
+    "strict": true,
+    "allowJs": true,
   }
 }
