--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/cache-manager": "^1.0.0",
-    "@nestjs/cli": "9.0.0",
+    "@nestjs/cli": "^9.5.0",
     "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^9.4.1",
@@ -38,6 +37,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/throttler": "^4.0.0",
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@snapshot-labs/snapshot.js": "^0.3.87",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -57,7 +57,6 @@
     "graphql-tag": "^2.12.6",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.1",
-    "jest-openapi": "^0.14.2",
     "joi": "^17.6.0",
     "keccak": "^3.0.2",
     "lodash": "^4.17.21",
@@ -75,9 +74,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/schematics": "^9.2.0",
     "@nestjs/testing": "^9.4.1",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
@@ -94,6 +93,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "jest": "^29.5.0",
+    "jest-openapi": "^0.14.2",
     "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -115,8 +115,19 @@
     ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.[tj]sx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
