--- a/package.json
+++ b/package.json
@@ -76,11 +76,13 @@
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.3.2",
+    "@jbiskur/nestjs-test-utilities": "^5.0.0",
     "@nestjs/schematics": "^9.2.0",
     "@nestjs/testing": "^9.4.1",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
+    "@types/cron": "^2.0.1",
     "@types/express": "4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/jest": "29.5.1",
@@ -96,6 +98,7 @@
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "jest-openapi": "^0.14.2",
+    "mongodb-memory-server": "^8.13.0",
     "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
