--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "precommit": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && yarn test && yarn build",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
-    "codegen": "yarn test:e2e && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=withoutPrefixEnums=true,withInterfaces=true,supportsES6=true,npmName=$API_CLIENT_NPM_PACKAGE_NAME,npmVersion=$npm_package_version",
+    "codegen": "yarn test:generate && openapi-generator-cli generate -i ./governator-api-spec.json -g typescript-axios -o src/api-client --additional-properties=withoutPrefixEnums=true,withInterfaces=true,supportsES6=true,npmName=$API_CLIENT_NPM_PACKAGE_NAME,npmVersion=$npm_package_version",
     "codegen:dev": "export NODE_ENV=development eval $(grep '^NPM_TOKEN' ./.env.development) eval $(grep '^API_CLIENT_NPM_PACKAGE_NAME' ./.env.development) && yarn codegen && cd ./src/api-client && yarn publish --verbose --new-version $npm_package_version",
     "build:dev": "yarn build:client:dev && yarn prebuild && nest build",
     "build:prod": "yarn build:client:prod && yarn prebuild && nest build",
@@ -22,13 +22,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "export NODE_ENV=test && jest --config ./test/jest-e2e.json --detectOpenHandles --forceExit",
+    "test:generate": "jest --config ./test/jest-generate.json"
   },
   "dependencies": {
-    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/cache-manager": "^1.0.0",
-    "@nestjs/cli": "9.0.0",
+    "@nestjs/cli": "^9.5.0",
     "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^9.4.1",
@@ -38,6 +38,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/throttler": "^4.0.0",
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@snapshot-labs/snapshot.js": "^0.3.87",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -57,7 +58,6 @@
     "graphql-tag": "^2.12.6",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.1",
-    "jest-openapi": "^0.14.2",
     "joi": "^17.6.0",
     "keccak": "^3.0.2",
     "lodash": "^4.17.21",
@@ -75,12 +75,13 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/schematics": "^9.2.0",
     "@nestjs/testing": "^9.4.1",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
+    "@types/cron": "^2.0.1",
     "@types/express": "4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/jest": "29.5.1",
@@ -94,6 +95,9 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
+    "jest-openapi": "^0.14.2",
+    "mongodb-memory-server": "^8.13.0",
     "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
