--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "rxjs": "^7.2.0",
     "siwe": "^2.0.3",
     "swagger-ui-express": "^4.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "mongodb-memory-server": "^8.13.0"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.3.2",
@@ -97,7 +98,6 @@
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "jest-openapi": "^0.14.2",
-    "mongodb-memory-server": "^8.13.0",
     "rxjs-spy": "^8.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
